--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "back",
   "version": "1.0.0",
   "description": "back_WRS",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server"
   },
@@ -11,11 +11,13 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
-    "nodemon": "^2.0.22",
+    "multer": "^2.0.0-rc.1",
+    "nodemon": "^3.0.1",
     "validator": "^13.9.0"
   }
 }
